package com.diguage.didp.command;

/**
 * Receiver 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class Receiver {
  public void action() {
    System.out.printf("执行请求！");
  }
}
