@startuml
title "**命令模式**"

abstract class Command {
  + {abstract} execute() :Object
}
note top: 用来声明执行操作的接口

class ConcreteCommand {
  - receiver  :Receiver
  + execute() :Object
}
note bottom: 将一个接受者对象绑定于一个动作，\n调用接受者相应的操作，以实现

class Invoker {
}
note top: 要求该命令执行这个请求

class Receiver {
  + action() :void
}
note bottom: 知道如何实施与执行一个请求相关的\n操作，任何类都可能作为一个接受者。

class Client {
}

Invoker o-right- Command

Command <|-- ConcreteCommand

Invoker <-right- Client
Client --> Receiver

Receiver <-left- "-receiver" ConcreteCommand

footer D瓜哥 · https://www.diguage.com · 出品
@enduml
